objects/FieloEE__Comment__c.object
<CustomObject>
    <description>Comments made by members in the membersâ€™ portal. Comments can be made on rewards and content feeds.</description>
    <fields>
        <fullName>FieloEE__AbuseDescription__c</fullName>
        <label>Abuse Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__AbuseReporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Abuse Reporter</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipName>Comments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Body__c</fullName>
        <description>The body text of this comment.</description>
        <inlineHelpText>Enter this comment&apos;s text.</inlineHelpText>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The member who made this comment.</description>
        <inlineHelpText>Enter the name of the member who made this commment.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__ParentId__c</fullName>
        <label>Parent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                    <default>true</default>
                    <label>Ok</label>
                </value>
                <value>
                    <fullName>Abuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>